# First-principle-NNK

./: README.md
DFT_NEB_input/: INCAR  KPOINTS
DFT_training_data/: model_file
DFT_training_data/MoTaV/: POSCAR  atomid_for_NN.txt  barrier_for_NN.txt
DFT_training_data/MoTaW/: POSCAR  atomid_for_NN.txt  barrier_for_NN.txt
DFT_training_data/MoTaWV/: POSCAR  atomid_for_NN.txt  barrier_for_NN.txt
DFT_training_data/MoWV/: POSCAR  atomid_for_NN.txt  barrier_for_NN.txt
DFT_training_data/Nb40MoTaWV/: POSCAR  atomid_for_NN.txt  barrier_for_NN.txt
DFT_training_data/Nb80MoTaWV/: POSCAR  atomid_for_NN.txt  barrier_for_NN.txt
DFT_training_data/NbMo40TaWV/: POSCAR  atomid_for_NN.txt  barrier_for_NN.txt
DFT_training_data/NbMo80TaWV/: POSCAR  atomid_for_NN.txt  barrier_for_NN.txt
DFT_training_data/NbMoTa/: POSCAR  atomid_for_NN.txt  barrier_for_NN.txt
DFT_training_data/NbMoTa40WV/: POSCAR  atomid_for_NN.txt  barrier_for_NN.txt
DFT_training_data/NbMoTa80WV/: POSCAR  atomid_for_NN.txt  barrier_for_NN.txt
DFT_training_data/NbMoTaV/: POSCAR  atomid_for_NN.txt  barrier_for_NN.txt
DFT_training_data/NbMoTaW/: POSCAR  atomid_for_NN.txt  barrier_for_NN.txt
DFT_training_data/NbMoTaW40V/: POSCAR  atomid_for_NN.txt  barrier_for_NN.txt
DFT_training_data/NbMoTaW80V/: POSCAR  atomid_for_NN.txt  barrier_for_NN.txt
DFT_training_data/NbMoV/: POSCAR  (+2 more)
fpnnk/: pyproject.toml
fpnnk/example/: MoTaW.dump  nnk_simu.py  user_inp
fpnnk/example/postprocess/: postprocess.py
fpnnk/src/nnk/: kmc_module.py  ml_predict.py  model_utils.py  neuron_map.py  process_module.py  utils.py
(+42 files in other folders)
